# rbd2qcow2

./: README.md  setup.py
cpp/: .gitignore  CMakeLists.txt  Makefile  limitedq.h  main.cpp  other_maps.cpp  qed.cpp  qed.h  qed_main.cpp
rbd2qcow2/: libc_wrappers.py  main.py  nbd_client.py  transferrer.py
